--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ expo-env.d.ts
 .kotlin/
 *.orig.*
 *.jks
-*.p8
+*.p8npm 
 *.p12
 *.key
 *.mobileprovision
@@ -41,3 +41,6 @@ app-example
 # generated native folders
 /ios
 /android
+
+build/
+.vscode/
